# KnuxfanWaiter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  skybox.py
backgrounds/disco/: theme.xml
backgrounds/sine/: earthbound.glsl  postproc.glsl  wolf.glsl
fonts/small8x8font/: fontdef.xml
models/: ourhouse.kmf  peachhouse.kmf
scenes/: scenes.xml
shaders/: fragment_reflective.shader
skyboxes/: skyboxes.xml
source/: SDLTetris.cpp  background.cpp  background.h  gamemode.h  globalgamemode.cpp  globalgamemode.h  pixfont.cpp  pixfont.h  sine.cpp  sine.h  ttffont.cpp  ttffont.h  wireframecube.cpp  wireframecube.h
source/opengl/: buffermanager.cpp  buffermanager.h  cube.cpp  cube.h  line.h  model.cpp  skybox.cpp  skybox.h  sota.cpp  sprite.h  texture.cpp
source/scenes/: clock.cpp  clock.h  debugscene.cpp  debugscene.h  knuxfanscreen.cpp  knuxfanscreen.h  mainmenu.cpp  mainmenu.h  solitaire.cpp  solitaire.h  weather.cpp  weather.h
source/utils/: defs.cpp  defs.h
sprites/: sprites.xml
